manifests/netpol-demo/10-deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: netpol-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client
        role: test
    spec:
      containers:
      - command:
        - sleep
        - '3600'
        image: curlimages/curl
        imagePullPolicy: Always
        name: client
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
