manifests/netpol-demo/20-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: netpol-demo
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
