manifests/netpol-demo/30-networkpolicy-client-default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-default-deny-egress
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
  - Egress
